# OpenCL-Guide

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.reuse/: dep5
chapters/: OpenCL Programming Model.md  additional_resources.md  cmake_build-system_support.md  cpp_for_opencl.md  getting_started_linux.md  getting_started_linux.md.md  getting_started_windows.md  how_does_opencl-opengl_interop.md  how_does_opencl_compare.md  how_does_opencl_work.md  opencl_3.md  opencl_programming_model.md  os_tooling.md  programming_opencl_kernels.md  what_is_opencl.md
